--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,11 +15,11 @@
   <!-- Ionicons -->
   <link href="https://unpkg.com/ionicons@4.2.2/dist/css/ionicons.min.css" rel="stylesheet">
 
-  {% capture styles %}
-  {% include styles.css %}
-  {% endcapture %}
 
   <style>
-  {{ styles | scssify }}
+    {% capture styles %}
+    {% include main.scss %}
+    {% endcapture %}
+    {{ styles | scssify }}
   </style>
 </head>
