Change relative paths of images

--- a/_includes/featured-posts.html
+++ b/_includes/featured-posts.html
@@ -26,7 +26,7 @@
                   {% if post.image.url %}
                   <img data-src="{{post.image.url}}" alt="{{post.title}}" class="blur-up lazyload">
                   {% else %}
-                  <img data-src="/images/bg.jpg" alt="{{post.title}}" class="blur-up lazyload">
+                  <img data-src="/pclub-website/images/bg.jpg" alt="{{post.title}}" class="blur-up lazyload">
                   {% endif %}
                 </a>
                 
