--- a/_sass/1-tools/_syntax-highlighting.scss
+++ b/_sass/1-tools/_syntax-highlighting.scss
@@ -7,9 +7,9 @@
   color: $white;
   background: $blue-dark;
 
-  .highlighter-rouge & {
-    background: #eef;
-  }
+  // .highlighter-rouge & {
+  //   background: #eef;
+  // }
 
   .c     { color: #998; font-style: italic } // Comment
   .err   { color: #a61717; background-color: #e3d2d2 } // Error
